added the prefill text

--- a/coming_soon.html
+++ b/coming_soon.html
@@ -165,7 +165,7 @@
                   <span class="input-group-btn">
                     <a
                       class="btn btn-cal-dark"
-                      href="https://wa.me/919811429733"
+                      href="https://wa.me/919811429733&text=Hello%2C%20I'm%20interested%20in%20your%20insurance.%20Could%20you%20help%20please%3F"
                     >
                       Contact Early
                     </a>
