--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 The insurance India trusts
               </p>
               <a
-                href="https://wa.me/919811429733&text=Hello%2C%20I'm%20interested%20in%20your%20insurance.%20Could%20you%20help%20please%3F"
+                href="https://wa.me/919811429733?text=Hello%2C%20I'm%20interested%20in%20your%20insurance.%20Could%20you%20help%20please%3F"
                 class="btn btn-cal-default-o"
                 >Contact now</a
               >
